# crossy

./: README.md
.cursor/rules/: architecture.mdc  environment.mdc  monorepo.mdc  python.mdc
app/: .env.example  .gitignore  README.md  SETUP.md  main.py  pyproject.toml
app/backend/: __init__.py  config.py  data_generator.py  database.py  main.py  models.py  routes.py
app/frontend/: index.html
app/frontend/css/: styles.css
app/frontend/js/: app.js  formView.js  jsonView.js  resetTab.js  viewTab.js
app/instructions/: crossy.md  implementation_plan.md
databricks/: README.md  databricks.yml
databricks/data/: 693a31ca5ff42e0a4ff4d7c041170eed-f073-4108-9a4d-06c14eaf554d.json  693a31ca5ff42e0a4ff4d7c0b43bcc63-81b9-4a4d-9f9e-2b7d416524ab.json  693a32405ff42e0a4ff4d7c236e43b0b-bb6a-4d30-86cd-5514ac69478c.json  693a32405ff42e0a4ff4d7c2f03395df-941c-4227-a1fa-c6bfd5d118a8.json
databricks/resources/: crossy_pipeline.yml  mongodb_cdc_job.yml  mongodb_cdc_job_classic.yml
databricks/src/crossy_pipeline/transformations/: bronze_vehicle.sql  silver_vehicle.sql
databricks/src/mongo_export_job/: export_collection.ipynb
databricks/src/mongocdc_job/: export_collection_cdc.ipynb
